# Fixed-Point-Reductions-For-vLLM

./: .gitignore  README.md  pyproject.toml
benchmarks/: fixed_point_cast_error.ipynb  gemm_error.ipynb  sum_error.ipynb
csrc/: attention.cu  bindings.cpp
fxpr_vllm/: __init__.py  library_ops.py  monkey_patches.py  register.py
fxpr_vllm/fixed_point_kernels/: __init__.py  attention.py  decode.py  fixed_point.py  gemm.py  prefill.py  rms_norm.py
fxpr_vllm/vllm_modules/: attention_backend.py  config.py  quantisation_config.py  rms_norm.py  sampling.py
notebooks/: gemm_error.ipynb  sum_error.ipynb
src/fixed_point_kernels/: decode.py  prefill.py  rms_norm.py
tests/: fixed_point_helpers.py  test_decode.py  test_fixed_point_cast.py  test_gemm.py  test_prefill.py  test_rms_norm.py  test_sum.py
triton_vllm_fixed_point_reductions/fixed_point_kernels/: decode.py  fixed_point.py  gemm.py  prefill.py  rms_norm.py  softmax.py
triton_vllm_fixed_point_reductions/vllm_modules/: attention_backend.py  plugin.py  quantisation_config.py  rms_norm_fxp.py  sampling.py
vllm_fixed_point_reductions/: register.py
vllm_fixed_point_reductions/fixed_point_kernels/: decode.py  fixed_point.py  gemm.py  prefill.py  rms_norm.py  softmax.py
vllm_fixed_point_reductions/vllm_modules/: attention_backend.py  quantisation_config.py  rms_norm_fxp.py  sampling.py
