[project]
name = "det-vllm"
version = "0.1.0"
description = "Deterministic inference for vLLM via fixed-point reductions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "vllm",
    "triton",
    "torch",
]

[project.entry-points."vllm.general_plugins"]
fixed_point_reductions = "triton_vllm_fixed_point_reductions.vllm_modules.plugin:register"

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
